[package]
name = "life-cell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.avrxmega-hal]
git = "https://github.com/agausmann/avr-hal.git"
branch = "attiny404"
features = ["attiny404", "rt"]

[patch.crates-io]
# Locally-built patch with attiny404 support.
# You can get it from the attiny404 branch at https://github.com/agausmann/avr-device;
# make sure to follow the build instructions in the README.
avr-device = { path = "/home/goose/dev/contrib/avr-device" }

[profile.dev]
panic = "abort"
opt-level = "z"
lto = true

[profile.release]
panic = "abort"
opt-level = "z"
lto = true