[workspace]
resolver = "2"
members = ["life-module"]

[profile.dev]
strip = false
lto = true
opt-level = "z"

[profile.release]
strip = false
lto = true
opt-level = "z"

[patch.crates-io]
# https://github.com/ch32-rs/qingke/pull/2
qingke-rt = { git = "https://github.com/agausmann/qingke.git", branch = "interrupt-fix" }
