[package]
name = "life-cell"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.avrxmega-hal]
git = "https://github.com/agausmann/avr-hal.git"
branch = "attiny404"
features = ["attiny404", "rt"]

[profile.dev]
panic = "abort"
opt-level = "z"
lto = true

[profile.release]
panic = "abort"
opt-level = "z"
lto = true